initial impl - unweighted graph as matrix